modify: 보안 설정 수정