@@ -1,6 +1,6 @@
 package university.likelion.wmt.common.auth;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -12,7 +12,6 @@ import lombok.RequiredArgsConstructor;
 
 import university.likelion.wmt.domain.user.entity.User;
 import university.likelion.wmt.domain.user.exception.UserErrorCode;
-import university.likelion.wmt.domain.user.exception.UserException;
 import university.likelion.wmt.domain.user.repository.UserRepository;
 
 @Service
@@ -23,13 +22,13 @@ public class JwtUserDetailsService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         User user = userRepository.findByUsername(username)
-            .orElseThrow(() -> new UserException(UserErrorCode.USER_NOT_FOUND));
+            .orElseThrow(() -> new UsernameNotFoundException(UserErrorCode.USER_NOT_FOUND.getMessage()));
 
         return JwtUserDetails.builder()
             .userId(user.getId())
             .username(user.getUsername())
             .password(user.getPassword())
-            .authorities(Collections.singletonList(new SimpleGrantedAuthority(user.getRole().getKey())))
+            .authorities(List.of(new SimpleGrantedAuthority(user.getRole().getKey())))
             .build();
     }
 }
